Changed logo > issues with svg text (didn't expand shape in illustrator) not rendering the font on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -643,7 +643,7 @@ footer {
   
   section.collapsable {
     border-top: #acacac solid 2px;
-    border-bottom: #acacac solid 2px;
+    /* border-bottom: #acacac solid 2px; */
     margin: 10px 0 0 0;
   }
 
